[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.13"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.19"
secrecy = { version = "0.10.3", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
"runtime-tokio",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
reqwest = "0.12.22"
once_cell = "1.21.3"
